[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightspeed_x"
version = "0.1.2"
dependencies = ["httpx"]
requires-python = ">=3.8"
authors = [
    {name = "nilaster", email = "nilaster@riseup.net"},
]
description = "This is a simple Python wrapper for the Lightspeed X Series API."
readme = "README.md"
license = {text = "MIT license"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Repository = "https://github.com/nilaster/lightspeed_x.git"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
major_version_zero = true
